Fix scrollbar toggle option. Add tools area under image view.

--- a/src/views/application.css
+++ b/src/views/application.css
@@ -3,3 +3,8 @@
 .root {
 	-fx-background-color: floralwhite ;
 }
+
+.separator .line {
+    -fx-border-color: #e79423;
+    -fx-border-width: 2;    
+}
